--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "name": "family-wellness-hospital-project",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "homepage": "https://github.com/bhumikasutar21/Family_Wellness_Hospital_Project#readme",
+  "bugs": {
+    "url": "https://github.com/bhumikasutar21/Family_Wellness_Hospital_Project/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bhumikasutar21/Family_Wellness_Hospital_Project.git"
+  },
+  "license": "ISC",
+  "author": "",
   "type": "module",
+  "main": "eslint.config.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,10 +22,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "framer-motion": "^12.23.12",
+    "nodemailer": "^7.0.6",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.22.2"
   },
   "devDependencies": {
